<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_white"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/troly_white"
            android:title="@string/cart" />

        <item
            android:id="@+id/nav_wish"
            android:icon="@drawable/heart"
            android:title="@string/wish" />

        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/cube_white"
            android:title="@string/Products" />

        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/group_white"
            android:title="@string/categories" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/user_white"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout_icon"
            android:title="@string/logout" />
    </group>
</menu>