<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_All"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="2"
            android:fontFamily="@font/lato_bold"
            android:background="@drawable/rectangle"
            android:text="@string/All" />

        <Button
            android:id="@+id/button_indoor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_weight="4"

            android:background="@drawable/rectangle"
            android:text="@string/Indoor" />

        <Button
            android:id="@+id/button_outdoor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="4"
            android:background="@drawable/rectangle"
            android:text="@string/Outdoor"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/white" />
        </LinearLayout>


    </RelativeLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            tools:listitem="@layout/product_design">

        </androidx.recyclerview.widget.RecyclerView>
    </ScrollView>



    </LinearLayout>




