<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white2" />

        <LinearLayout
            android:id="@+id/llHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/ivHome"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/home" />

            <TextView
                android:id="@+id/tvHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/home"
                android:textColor="@color/black"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp"

            >

            <ImageView
                android:id="@+id/ivCart"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/troly" />

            <TextView
                android:id="@+id/tvCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/cart"
                android:textColor="@color/black"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llWishList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/ivWishList"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/heart" />

            <TextView
                android:id="@+id/tvWishList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/wish"
                android:textColor="@color/black"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/ivProduct"
                android:layout_width="18dp"
                android:layout_height="20dp"
                android:src="@drawable/group" />

            <TextView
                android:id="@+id/tvProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/products"
                android:textColor="@color/black"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/ivCategories"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/cube" />

            <TextView
                android:id="@+id/tvCategories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/categories"
                android:textColor="@color/black"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/ivProfile"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/user" />

            <TextView
                android:id="@+id/tvProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/profile"
                android:textColor="@color/black"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/ivLogout"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/logout_icon" />

            <TextView
                android:id="@+id/tvLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/logout"
                android:textColor="@color/black"
                android:textSize="15dp" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>