<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".profile_Edit">
    <include layout="@layout/header_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="30dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/_76sdp"
                    android:layout_height="@dimen/_76sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/unsplash" />

                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginLeft="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_70sdp"
                    android:src="@drawable/camera" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/lato_regular"
                    android:hint="@string/Name"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hintcolor"
                    android:textSize="@dimen/_13ssp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/hintcolor" />

                <EditText
                    android:id="@+id/etMobileno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/lato_regular"
                    android:hint="@string/Mobile"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hintcolor"
                    android:textSize="@dimen/_13ssp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/hintcolor" />

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/lato_regular"
                    android:hint="@string/username"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hintcolor"
                    android:textSize="@dimen/_13ssp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/hintcolor" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/lato_regular"
                    android:hint="@string/email"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hintcolor"
                    android:textSize="@dimen/_13ssp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/hintcolor" />

                <EditText
                    android:id="@+id/etLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/lato_regular"
                    android:hint="@string/location"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hintcolor"
                    android:textSize="@dimen/_13ssp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/hintcolor" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_210sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_gravity="center"

                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="@dimen/_16sdp">


                <TextView
                    android:id="@+id/buton_payment"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:backgroundTint="@color/black2"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/Save"
                    android:textSize="@dimen/_17sdp" />

            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>

</LinearLayout>