<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/home_white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/et_shipping_address"
                    android:layout_width="@dimen/_190sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textColor="@color/black2"
                    android:fontFamily="@font/lato_medium"
                    android:textSize="@dimen/_15sdp"
                    android:text="@string/island"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/et_country"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:fontFamily="@font/lato_regular"
                        android:textSize="@dimen/_11ssp"
                        android:textColor="@color/darkgrey2"
                        android:text="@string/us"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_add_new_address"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_14sdp"
            android:fontFamily="@font/lato_regular"
            android:textSize="@dimen/_12sdp"
            android:text="@string/new_address"
            android:layout_gravity="center"/>


    </LinearLayout>

</LinearLayout>
