<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"

    tools:context=".Payment.Payment_activity">


    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"

        tools:context=".Payment.Payment_activity">

        <include layout="@layout/header_layout" />

        <RelativeLayout
            android:id="@+id/payment_done_popup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <include layout="@layout/payment_done_popup" />

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_marginBottom="70dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_medium"
                    android:text="@string/shipping_to"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvAddressList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:itemCount="2"
                    tools:listitem="@layout/payment_layout_row">

                </androidx.recyclerview.widget.RecyclerView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_add_address"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_14sdp"
                        android:layout_gravity="right"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/lato_regular"
                        android:text="@string/new_address"
                        android:textSize="@dimen/_12sdp" />


                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_medium"
                    android:text="@string/pay_method"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"

                    android:background="@drawable/rectangle_border3">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvpayment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        tools:listitem="@layout/payment_method" />

                </LinearLayout>


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </LinearLayout>

    <TextView
        android:id="@+id/buton_payment"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/reactangle_black2"
        android:fontFamily="@font/lato_regular"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/payment"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"

        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp" />
</RelativeLayout>
